Always show vertical scrollbar, fork badge no longer jitters

--- a/src/public/styles/all.less
+++ b/src/public/styles/all.less
@@ -9,6 +9,7 @@
 body {
 	padding: 10px;
 	.segoe-ui-semilight();
+	overflow-y: scroll;
 }
 #fork-me-on-github {
 	position: absolute;
